[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts/Brown Sugar .ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/DISEÑO BÁSICO BLANCO.png" type="Texture" id=2]
[ext_resource path="res://Scenes/LogginPanel.gd" type="Script" id=3]
[ext_resource path="res://Scenes/RegisterBox.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MenuElements.gd" type="Script" id=5]
[ext_resource path="res://Scenes/RegisterPanel.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Global.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Label.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scenes/Button.tres" type="StyleBox" id=9]
[ext_resource path="res://Scenes/ButtonLetter.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scenes/buttonHOVER.tres" type="StyleBox" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.729412, 0.776471, 1 )
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.423529, 0.964706, 1, 1 )
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22

[node name="Main" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 278, 548 )

[node name="UI" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="UI"]
position = Vector2( 276.75, 253.25 )
scale = Vector2( 0.052875, 0.0466251 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 184.75
margin_top = 334.25
margin_right = 368.75
margin_bottom = 374.25
custom_colors/font_color = Color( 0, 0.729412, 0.776471, 1 )
custom_fonts/font = SubResource( 1 )
text = "DECISIONS"
align = 1
valign = 1

[node name="MenuElements" type="Node2D" parent="UI"]
position = Vector2( 0, 700 )
script = ExtResource( 5 )

[node name="LogginPanel" type="Node2D" parent="UI/MenuElements"]
position = Vector2( 0, -700 )
script = ExtResource( 3 )

[node name="move_tween" type="Tween" parent="UI/MenuElements/LogginPanel"]

[node name="EnterBt" type="Button" parent="UI/MenuElements/LogginPanel"]
margin_left = 127.0
margin_top = 661.0
margin_right = 267.0
margin_bottom = 721.0
input_pass_on_modal_close_click = false
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
text = "ENTER"
icon_align = 1

[node name="User" type="Label" parent="UI/MenuElements/LogginPanel"]
margin_left = 131.0
margin_top = 469.0
margin_right = 431.0
margin_bottom = 500.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 6 )
text = "Username:"
valign = 1

[node name="UserName" type="LineEdit" parent="UI/MenuElements/LogginPanel"]
margin_left = 131.0
margin_top = 503.0
margin_right = 431.0
margin_bottom = 543.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
clear_button_enabled = true

[node name="UserPwd" type="LineEdit" parent="UI/MenuElements/LogginPanel"]
margin_left = 131.0
margin_top = 589.0
margin_right = 431.0
margin_bottom = 629.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true

[node name="Password" type="Label" parent="UI/MenuElements/LogginPanel"]
margin_left = 131.0
margin_top = 552.0
margin_right = 431.0
margin_bottom = 583.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Password:"
valign = 1

[node name="RegisterPanel" type="Node2D" parent="UI/MenuElements"]
script = ExtResource( 6 )

[node name="Mail" type="Label" parent="UI/MenuElements/RegisterPanel"]
margin_left = 584.0
margin_top = -298.0
margin_right = 884.0
margin_bottom = -267.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Mail:"
valign = 1

[node name="User" type="Label" parent="UI/MenuElements/RegisterPanel"]
margin_left = 584.0
margin_top = -233.0
margin_right = 884.0
margin_bottom = -202.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "User:"
valign = 1

[node name="Password" type="Label" parent="UI/MenuElements/RegisterPanel"]
margin_left = 585.0
margin_top = -176.0
margin_right = 885.0
margin_bottom = -145.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Password:"
valign = 1

[node name="ConfirmPassword" type="Label" parent="UI/MenuElements/RegisterPanel"]
margin_left = 583.0
margin_top = -112.0
margin_right = 883.0
margin_bottom = -81.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Confirm Password:"
valign = 1

[node name="ConfirmPass" type="LineEdit" parent="UI/MenuElements/RegisterPanel"]
margin_left = 583.0
margin_top = -77.0
margin_right = 883.0
margin_bottom = -59.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true

[node name="UserPassword" type="LineEdit" parent="UI/MenuElements/RegisterPanel"]
margin_left = 584.0
margin_top = -141.0
margin_right = 884.0
margin_bottom = -123.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true

[node name="UserText" type="LineEdit" parent="UI/MenuElements/RegisterPanel"]
margin_left = 586.0
margin_top = -202.0
margin_right = 886.0
margin_bottom = -184.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true

[node name="UserMail" type="LineEdit" parent="UI/MenuElements/RegisterPanel"]
margin_left = 586.0
margin_top = -265.0
margin_right = 886.0
margin_bottom = -247.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 9 )
clear_button_enabled = true

[node name="RegisterBox" type="VBoxContainer" parent="UI/MenuElements/RegisterPanel"]
anchor_right = 0.688
margin_left = 576.0
margin_top = -300.0
margin_right = 876.0
script = ExtResource( 4 )

[node name="move_tween" type="Tween" parent="UI/MenuElements/RegisterPanel"]

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuElements"]
margin_right = 576.0
margin_bottom = 98.0

[node name="Register" type="Button" parent="UI/MenuElements"]
margin_left = 277.0
margin_top = -39.0
margin_right = 427.0
margin_bottom = 21.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
enabled_focus_mode = 0
text = "REGISTER"

[node name="Loggin" type="Button" parent="UI/MenuElements"]
visible = false
margin_left = 277.0
margin_top = -40.0
margin_right = 427.0
margin_bottom = 20.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/normal = ExtResource( 9 )
enabled_focus_mode = 0
text = "LOGIN"

[node name="EXIT" type="Button" parent="UI/MenuElements"]
margin_left = 127.0
margin_top = 38.0
margin_right = 427.0
margin_bottom = 83.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 10 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
enabled_focus_mode = 0
text = "EXIT"

[node name="Buttons" type="Node2D" parent="."]

[node name="Emitters" type="Node2D" parent="."]

[node name="Global" type="Node2D" parent="."]
script = ExtResource( 7 )

[connection signal="pressed" from="UI/MenuElements/Register" to="UI/MenuElements" method="_on_Register_pressed"]
[connection signal="pressed" from="UI/MenuElements/Loggin" to="UI/MenuElements" method="_on_Loggin_pressed"]
[connection signal="pressed" from="UI/MenuElements/EXIT" to="UI/MenuElements" method="_on_EXIT_pressed"]
